--- a/P2P/README
+++ b/P2P/README
@@ -1,1 +1,2 @@
-
+This document deals with Peer to peer network among various devices, also referred to as subscribers in Phase3.
+We sequentially execute the Phase 1 through 4.
